--- a/ProjetoInd_2/Code/styles.css
+++ b/ProjetoInd_2/Code/styles.css
@@ -232,12 +232,27 @@ aside .sidebar a:hover:not(a.active):not(a:last-child) {
     left: 8px;
 }
 aside .sidebar a:last-child:hover {
+    /*
     display: flex;
+    flex-direction: column;
     align-items: center;
-    height: 59.2px;
-    width: 80%;
+    color: var(--color-lightSide-info);
+    height: 53px;
     gap: 5px;
     position: absolute;
+    margin: 0 16px;
+    padding: 0 55px;
+    transition: all 0.5s ease;
+    bottom: 2px;
+    */
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 55px;
+    gap: 5px;
+    position: absolute;
+    margin: 0 0 0 50%;
     padding: 0 25px;
     transition: all 0.3s ease;
     color: var(--color-primary);
@@ -251,4 +266,6 @@ aside .sidebar .tickets-count{
     font-size: 11px;
     border-radius: var(--border-radius2);
 }
+
+
 
