--- a/Eric/style.css
+++ b/Eric/style.css
@@ -11,24 +11,21 @@
         margin: 0;
         padding: 0;
         color: rgb(0, 0, 0);
-        background-image: url('https://img.freepik.com/vetores-premium/fundo-quadriculado-quadrado-preto-e-branco-do-vetor_231786-5665.jpg?w=740');
-        background-blend-mode: multiply; /* Mistura a cor de fundo com a imagem */
-        background-color: rgb(69, 141, 200);
+        background-image: url('fundo2.png');
+background-size: cover;
     }
     header, nav, section, article, aside, footer {
         padding: 5px;
     }
     header {
+        background-color: #53280a;
         color: white;
-        text-align: center;
-        background-color:rgb(10, 120, 104);
     }
     header h1, header p {
         text-shadow: 2px 2px 5px rgb(0, 0, 0)
     }
     nav {
-        background-color: rgb(5, 5, 113);
-
+        background-color: #53280a;
         text-align: center;
 
     }
@@ -38,34 +35,39 @@
     }
     nav ul li {
         display: inline;
-        margin-right: 10px;
+        margin-right: 30px;
+        margin-left: 30px;
     }
     nav ul li a {
         color: rgb(254, 255, 254);
         text-decoration: none;
         padding: 14px;
-        background-color: rgb(53, 76, 160);
+        background-color: rgb(112, 69, 24);
         border-radius: 10px;
 
     }
     nav ul li a:hover {
-      background-color: rgb(59, 103, 224);
+      background-color: rgb(56, 191, 61);
       color: white;
-    border-radius: 10px;
+      border-radius: 10px;
     }
 
     .container{
-        border: 8px solid rgb(69, 65, 21);
-        background: rgb(26, 165, 5);
-        width: auto;
+        border: 12px solid rgb(69, 65, 21);
+        background-image: url('fundo_form.png');
+        background-position: center; /* Centraliza a imagem no fundo */
+        background-size: cover;
+        background-repeat: no-repeat;
+        width: 45%;
         height: auto;
         margin-top: 10%;
-        margin-left: 10%;
-        margin-right: 10%;
+        margin-left: auto;
+        margin-right: auto;
         padding: 12px;
         border-radius: 5px;
-        color: white;
+        color: rgb(44, 23, 7);
         border-radius: 25px;
+        position: center;
     }
 
     .container a{
@@ -75,13 +77,13 @@
 
     form {
         margin: 20px 0;
-        color: white;
+        color: rgb(56, 36, 10);
     }
     
     form input[type="text"], form input[type="email"], form input[type="password"] {
         width: 100%;
         padding: 12px;
-        border: 1px solid #ccc;
+        border: 2px solid #ccc;
         border-radius: 4px;
         box-sizing: border-box;
         margin-top: 6px;
@@ -96,7 +98,8 @@
         border: none;
         border-radius: 4px;
         cursor: pointer;
-    }
+        font-size: large;
+        }
     
     form input[type="submit"]:hover {
         background-color: rgb(102, 119, 120);
@@ -105,4 +108,13 @@
     @media screen and(max-height: 450px){
         .container{padding-top: 15px;}
         .container a{font-size: 18px;}
+    }
+
+    footer {
+        color: rgb(19, 14, 14);
+        text-align: justify;
+        padding: 30px 0;
+        position: flex;
+        bottom: 0;
+        width: 100%;
     }
