--- a/ProjetoInd_3/02_users_admin_styles.css
+++ b/ProjetoInd_3/02_users_admin_styles.css
@@ -445,11 +445,11 @@ main .new-users .user-list {
 main .new-users .user-list:hover {
     box-shadow: none;
 }
-/* Verificar depois se retira */
+/* Verificar depois se retira 
 main .new-users .user-list > div {
     display: none;
 }
-
+*/
 main .new-users .user {
     display: flex;
     flex-direction: column;
@@ -464,16 +464,38 @@ main .new-users .user-list .user img {
     border-radius: 50%;
 }
 
+main .new-users .user-list .user .btn-detalhes_usuario {
+    font-family: "Open Sans", sans-serif;
+    font-size: 13px;
+    letter-spacing: 2px;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: #000;
+    cursor: pointer;
+    border: 3px solid;
+    padding: 0.25em 0.5em;
+    box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
+    position: relative;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+}
+main .new-users .user-list .user .btn-detalhes_usuario:active {
+    box-shadow: 0px 0px 0px 0px;
+    top: 5px;
+    left: 5px;
+}
+
 /* Estilização da Tabela de Pedidos Recentes */
-main .recent-orders {
+main .users-details {
     margin-top: 20.8px;
 }
 
-main .recent-orders h2 {
+main .users-details h2 {
     margin-bottom: 12.8px;
 }
 
-main .recent-orders table {
+main .users-details #detalhes {
     background-color: var(--color-background2);
     width: 100%;
     padding: var(--card-padding);
@@ -482,7 +504,7 @@ main .recent-orders table {
     border-radius: var(--card-border-radius);
     transition: all 0.3s ease;
 }
-main .recent-orders table:hover {
+main .users-details table:hover {
     box-shadow: none;
 }
 
@@ -501,7 +523,7 @@ main table tbody tr:last-child td {
     border: none;
 }
 
-main .recent-orders a {
+main .users-details a {
     text-align: center;
     display: block;
     margin: 16px auto;
@@ -713,7 +735,7 @@ main .recent-orders a {
         flex-basis: 40%;
     }
 
-    main .recent-orders {
+    main .users-details {
         width: 94%;
         position: absolute;
         left: 50%;
@@ -721,13 +743,13 @@ main .recent-orders a {
         margin: 32px 0 0 12.8px;
     }
 
-    main .recent-orders table {
+    main .users-details table {
         width: 83vw;
     }
-    main .recent-orders table tbody tr td:last-child, main .recent-orders table tbody tr td:first-child{
+    main .users-details table tbody tr td:last-child, main .users-details table tbody tr td:first-child{
         display: none;
     }
-    main .recent-orders table thead tr th:last-child, main .recent-orders table thead tr th:first-child{
+    main .users-details table thead tr th:last-child, main .users-details table thead tr th:first-child{
         display: none;
     }
 
@@ -804,13 +826,13 @@ main .recent-orders a {
         flex-basis: 45%;
     }
 
-    main .recent-orders {
+    main .users-details {
         position: relative;
         margin: 48px 0 0 0;
         width: 100%;
     }
 
-    main .recent-orders table {
+    main .users-details table {
         width: 100%;
         margin: 0;
     }
