--- a/ProjetoInd_3/02_users_styles.css
+++ b/ProjetoInd_3/02_users_styles.css
@@ -445,11 +445,11 @@ main .new-users .user-list {
 main .new-users .user-list:hover {
     box-shadow: none;
 }
-/* Verificar depois se retira */
+/* Verificar depois se retira 
 main .new-users .user-list > div {
     display: none;
 }
-
+*/
 main .new-users .user {
     display: flex;
     flex-direction: column;
