--- a/ProjetoInd_3/index_styles.css
+++ b/ProjetoInd_3/index_styles.css
@@ -680,7 +680,7 @@ main .recent-orders a {
 
 .right-section .reminders .notification .icon {
     padding: 9.6px;
-    color: var(--color-background2);
+    color: var(--color-text);
     background-color: var(--color-success);
     border-radius: 20%;
     display: flex;
